--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "wordpress plugin for spike",
   "main": "lib",
   "scripts": {
-    "test": "ava"
+    "test": "standard --verbose | snazzy && ava"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,9 @@
     "dotenv": "^2.0.0",
     "path": "^0.12.7",
     "rimraf": "^2.5.4",
+    "snazzy": "^4.0.1",
     "spike-core": "^0.11.2",
-    "spike-html-standards": "^0.2.1"
+    "spike-html-standards": "^0.2.1",
+    "standard": "^8.0.0-beta.5"
   }
 }
