--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi": "^9.0.4",
     "reshape": "^0.3.2",
     "reshape-loader": "^0.2.3",
+    "rest": "^2.0.0",
     "when": "^3.7.7"
   },
   "devDependencies": {
