--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "ava": "^0.16.0",
     "coveralls": "^2.11.12",
     "dotenv": "^2.0.0",
-    "nyc": "^8.1.0",
+    "nyc": "^8.3.0",
     "path": "^0.12.7",
-    "reshape-standard": "^0.2.0",
+    "reshape-standard": "^0.4.0",
     "rimraf": "^2.5.4",
     "snazzy": "^5.0.0",
     "spike-core": "^0.12.1",
-    "standard": "^8.0.0-beta.5"
+    "standard": "^8.1.0"
   },
   "engines": {
     "node": ">= 6.0.0"
