--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "when": "^3.7.7"
   },
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "0.17.0",
     "coveralls": "^2.11.15",
     "dotenv": "^2.0.0",
     "nyc": "^9.0.1",
     "path": "^0.12.7",
-    "reshape-standard": "^0.4.0",
+    "reshape-standard": "0.4.1",
     "rimraf": "^2.5.4",
     "snazzy": "^5.0.0",
     "spike-core": "^0.12.1",
