--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "bugs": "https://github.com/wkentdag/spike-wordpress/issues",
   "dependencies": {
     "joi": "^9.0.4",
+    "lodash.pickby": "^4.6.0",
     "reshape": "^0.3.2",
     "reshape-loader": "^0.3.0",
     "rest": "^2.0.0",
