--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "bugs": "https://github.com/wkentdag/spike-wordpress/issues",
   "dependencies": {
-    "joi": "^9.0.4",
+    "he": "^1.1.0",
+    "joi": "^10.0.0",
     "lodash.pickby": "^4.6.0",
     "reshape": "^0.3.2",
     "reshape-loader": "^0.3.0",
@@ -22,7 +23,7 @@
     "dotenv": "^2.0.0",
     "nyc": "^9.0.1",
     "path": "^0.12.7",
-    "reshape-standard": "0.4.1",
+    "reshape-standard": "^0.4.2",
     "rimraf": "^2.5.4",
     "snazzy": "^5.0.0",
     "spike-core": "^0.12.1",
