--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spike-wordpress",
   "description": "wordpress plugin for spike",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "will kent-daggett",
   "ava": {
     "verbose": "true",
@@ -45,7 +45,7 @@
     "url": "git+https://github.com/wkentdag/spike-wordpress.git"
   },
   "scripts": {
-    "test": "standard --verbose | snazzy && ava",
+    "test": "standard --verbose | snazzy && SITE=138.197.198.156 ava",
     "coverage": "nyc ava",
     "coveralls": "nyc --reporter=lcov ava && cat ./coverage/lcov.info | coveralls"
   }
