--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "url": "git+https://github.com/wkentdag/spike-wordpress.git"
   },
   "scripts": {
-    "test": "standard --verbose | snazzy && SITE=138.197.198.156 ava",
+    "test": "standard --verbose | snazzy && ava",
     "coverage": "nyc ava",
     "coveralls": "nyc --reporter=lcov ava && cat ./coverage/lcov.info | coveralls"
   }
