--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "joi": "^10.0.0",
     "lodash.pickby": "^4.6.0",
     "reshape": "^0.4.1",
-    "reshape-loader": "^0.4.2",
+    "reshape-loader": "^1.0.0",
     "rest": "^2.0.0",
+    "spike-util": "^1.0.0",
     "when": "^3.7.7"
   },
   "devDependencies": {
@@ -23,10 +24,10 @@
     "dotenv": "^4.0.0",
     "nyc": "^10.0.0",
     "path": "^0.12.7",
-    "reshape-standard": "^0.5.0",
+    "reshape-standard": "^1.0.0",
     "rimraf": "^2.5.4",
     "snazzy": "^6.0.0",
-    "spike-core": "^0.13.3",
+    "spike-core": "^1.0.0",
     "standard": "^8.1.0"
   },
   "engines": {
