--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reshape-loader": "^1.0.0",
     "rest": "^2.0.0",
     "spike-util": "^1.0.0",
-    "when": "^3.7.7"
+    "when": "^3.7.7",
+    "wpapi": "^1.1.2"
   },
   "devDependencies": {
     "ava": "0.19.1",
